2010-01-14  Paul Thomas  <pault@gcc.gnu.org>

PR fortran/42481
	* module.c (load_generic_interfaces): If a procedure that is
	use associated but not generic is given an interface that
	includes itself, then make it generic.

2010-01-14  Paul Thomas  <pault@gcc.gnu.org>

	PR fortran/42481
	* gfortran.dg/generic_19.f90 : New test.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@155876 138bc75d-0d04-0410-961f-82ee72b054a4